fix parallax overflow

--- a/css/home.css
+++ b/css/home.css
@@ -46,14 +46,29 @@ h1 {
     box-shadow: 0 0 30px rgba(0, 0, 0, 0.7);
 }
 
-.background {
+.background-container {
     position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    overflow: hidden;
+    perspective: 1px;
+    transform-style: preserve-3d;
+}
+
+.background {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 100%;
+    height: 100%;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    z-index: -1;
-    pointer-events: none;
-
+    transform: translate3d(0, 0, 0);
+    will-change: transform;
 }
 
 .background.bg1 {
